2005-07-01  Ben Elliston  <bje@gnu.org>

	Backport from mainline:

	2004-10-28  Nick Clifton  <nickc@redhat.com>
	* baseboards/iq2000-sim.exp: New file.

	2004-06-08  Alexandre Oliva  <aoliva@redhat.com>
	* baseboards/mn10300-sim.exp: Set needs_status_wrapper and
	noresults to zero.

	2004-05-13  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>
	* baseboards/m32r-linux-sim.exp: Add New file.

2005-06-24  Ben Elliston  <bje@gnu.org>

	* MAINTAINERS: Update my email address.

2005-06-24  Ben Elliston  <bje@gnu.org>

	* Update the FSF's physical address throughout.

2005-06-22  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to most recent version.
	* config.sub: Likewise.

2004-08-22  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to most recent version.
	* config.sub: Likewise.

2004-08-20  Daniel Jacobowitz  <dan@debian.org>

	* testglue.c: Prototype abort(3) and exit(3).

2004-02-21  Ben Elliston  <bje@wasabisystems.com>

	* lib/libgloss.exp (build_wrapper): Remove redundant set command.

2004-02-08  Daniel Jacobowitz  <drow@mvista.com>

	* baseboards/basic-sim.exp: Set gdb,do_reload_on_run.

2004-02-07  Ben Elliston  <bje@wasabisystems.com>

	* NEWS: Update.

2004-02-06  Ben Elliston  <bje@wasabisystems.com>

	* lib/target.exp (prune_warnings): Add spaces where required in
	NetBSD warnings.  Supersedes a patch in pkgsrc's devel/dejagnu.

2004-01-30  Ben Elliston  <bje@wasabisystems.com>

	Import orphaned patches from sources.redhat.com:

	2002-05-02  Fernando Nasser  <fnasser@redhat.com>
	* doc/dejagnu.texi: Document KFAIL and KPASS.

	2002-02-20  Richard Henderson  <rth@redhat.com>
	* lib/target.exp (prune_warnings): Revert early "In function" strip,
	as this breaks g++.dg tests.  Match dangerous regexp without the
	"In function" header.

	2002-02-09  Richard Henderson  <rth@redhat.com>
	* lib/target.exp (prune_warnings): Strip "In function" etc early.
	Adjust "dangerous" regexp for glibc's tmpnam warning.

	2001-09-10  Jim Blandy  <jimb@redhat.com>